--- a/ld-server-music/package.json
+++ b/ld-server-music/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "NODE_ENV=test jest --detectOpenHandles --runInBand --forceExit"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "jest": "^25.2.7",
+    "nodemon": "^2.0.7",
     "supertest": "^4.0.2"
   }
 }
