--- a/ld-server-music/package.json
+++ b/ld-server-music/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "SET NODE_ENV=test&&jest --detectOpenHandles --runInBand --forceExit",
-    "setup:test": "SET NODE_ENV=test&&sequelize db:create && sequelize db:migrate"
+    "setup": "sequelize db:drop && sequelize db:create && sequelize db:migrate",
+    "setup:test": "SET NODE_ENV=test&&sequelize db:drop && sequelize db:create && sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
